<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.autentication.LoginFragment">

        <ImageView
            android:id="@+id/imageViewBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="177dp"
            android:layout_height="232dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loog_register" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/inria_sans_bold_italic"
            android:text="@string/login"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@android:drawable/ic_dialog_email"
            app:boxStrokeColor="@color/blueMuseum"
            app:hintTextColor="@color/blueMuseum"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:cursorErrorColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/blueMuseum"
            app:boxStrokeWidth="2dp"
            app:cursorErrorColor="@color/design_default_color_error"
            app:errorEnabled="true"
            app:hintTextColor="@color/blueMuseum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailAddress"
            app:startIconDrawable="@android:drawable/ic_lock_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#023859"
            android:fontFamily="@font/inria_sans_bold"
            android:text="@string/login"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewPassword"
            app:layout_constraintStart_toStartOf="@+id/textViewPassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
            app:rippleColor="#000000" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="210dp"
            android:layout_height="17dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inria_sans_regular"
            android:text="@string/register_label"
            android:textColor="#156799"
            app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/inria_sans_regular"
            android:text="@string/forgot_password_label"
            android:textColor="#156799"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/textViewRegister"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/textViewRegister"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>